# Easy-Crawler2

./: README.md  main.c  makefile  meson.build  readme.md
Debug/: main.d  makefile  tieba_img.sav
Debug/Mainui/: subdir.mk
Debug/Task/: MyDl.d  MyDownload.d  MyQuerySetDialog.d
Debug/gresource/: subdir.mk
Debug/massif/: task_log.html
Mainui/: MyMainUi.c  MyMainUi.h
Operater/: MyOperater.c  MyOperater.h
Task/: MyDl.c  MyDl.h  MyDownload.c  MyDownload.h  MyFilterSetDialog.c  MyJsCmd.c  MyJsCmdSetDialog.c  MyLoader.c  MyLoaderSetDialog.h  MyQuery.c  MyQuery.h  MyQuerySetDialog.c  MyStart.c  MyStart.h  MyStartSetDialog.c  global.h  io.c  io.h  msg.c  task.h
gresource/: MainUi.glade~  MyDownload.glade  MyDownload.glade~  MyFilter.glade  MyFilterSetDialog.glade~  MyJsCmd.glade  MyJsCmdSetDialog.glade~  MyLoader.glade  MyLoaderSetDialog.glade  MyMainUi.glade  MyMainUi.glade~  MyOpener.glade~  MyQuery.glade  MyQuerySetDialog.glade~  MyStart.glade~  MyStartSetDialog.glade  MyTask.glade  gresource.c  gresource.xml  my_download.glade~  task_menu.glade~
webkitgtk_test2/: .cproject  .project  MyJsHelper.h  makefile.init  read.md  readme.md
webkitgtk_test2/Debug/: objects.mk  sources.mk  subdir.mk  task_log.html  webkitgtk_test2  无标题文档
webkitgtk_test2/Mainui/: MyMainUi.c
webkitgtk_test2/Task/: MyDl.c  MyFilter.c  MyFilter.h  MyFilterSetDialog.h  MyJsCmd.c  MyJsCmd.h  MyJsCmdSetDialog.h  MyLoader.c  MyLoader.h  MyLoaderSetDialog.c  MyQuerySetDialog.h  MyStart.c  MyStartSetDialog.h  global.h  msg.h  task.c
webkitgtk_test2/gresource/: MyDl.glade  MyDl.glade~  (+14 more)
(+19 files in other folders)
